...
      var onButton : UIButton!
      var fButton : UIButton!
      var gButton : UIButton!
    
    var calculatorEngine : UPNEngine! = UPNEngine()
    var registerController : RegisterController! = RegisterController()
    var display : CalculatorDisplay!

    var commandController : CommandController!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        // Do any additional setup after loading the view.
...
        xoveryButton  = createButton(title1:"D",title2: "yX", title3:"%", accessoryLabel: "xovery")
        view.addSubview(xoveryButton)

        onedivxButton  = createButton(title1:"E",title2: "1/x",  title3:"∆%", accessoryLabel: "divide1byx")
        view.addSubview(onedivxButton)

        chsButton = createButton(title1:"",title2: "CHS",  title3:"ABS", accessoryLabel: "chs")
        view.addSubview(chsButton)
        
        digit7Button = createButton(title1:"FIX",title2: "7",  title3:"DEG", accessoryLabel: "digit7")
        view.addSubview(digit7Button)

        digit8Button = createButton(title1:"SCI",title2: "8",  title3:"RAD", accessoryLabel: "digit8")
        view.addSubview(digit8Button)

        digit9Button = createButton(title1:"ENG",title2: "9",  title3:"GRD", accessoryLabel: "digit9")
        view.addSubview(digit9Button)

        addButton = createButton(title1:"",title2: "/",  title3:"", accessoryLabel: "divide")
        view.addSubview(addButton)


        // Second Row
        
        noop1Button = createButton(title1:"",title2: "Noop", title3:"",  accessoryLabel: "noop1")
...
        view.addSubview(tanButton)

            
        eexButton = createButton(title1:"",title2: "EEX",  title3:"π", accessoryLabel: "eex")
         view.addSubview(eexButton)

        digit4Button = createButton(title1:"",title2: "4",  title3:"", accessoryLabel: "digit4")
        view.addSubview(digit4Button)

        digit5Button = createButton(title1:"",title2: "5",  title3:"", accessoryLabel: "digit5")
        view.addSubview(digit5Button)

        digit6Button = createButton(title1:"",title2: "6",  title3:"", accessoryLabel: "digit6")
        view.addSubview(digit6Button)

        subtractButton = createButton(title1:"",title2: "*", title3:"",  accessoryLabel: "multiply")
        view.addSubview(subtractButton)


        // Third Row
        
        noop3Button = createButton(title1:"",title2: "Noop",  title3:"", accessoryLabel: "noop3")
        view.addSubview(noop3Button)

        gsbButton = createButton(title1:"Clear ∑",title2: "GSB",  title3:"", accessoryLabel: "gsb")
        view.addSubview(gsbButton)

        rollDownButton = createButton(title1:"",title2: "R⬇︎",  title3:"R⬆︎", accessoryLabel: "rdown")
        view.addSubview(rollDownButton)

        xExYButton = createButton(title1:"Clear REG",title2: "X↔︎Y",  title3:"RND", accessoryLabel: "exchangexy")
        view.addSubview(xExYButton)

        backArrowButton = createButton(title1:"",title2: "←",  title3:"CLx", accessoryLabel: "backarrow")
        view.addSubview(backArrowButton)

        enterButton  = createButton(title1:"RAN#",title2: "\n\nEnter\n",  title3:"LST X", accessoryLabel: "enter")
        enterButton.setBackgroundImage(UIImage(named: "ButtonLarge"), for: .normal)
        view.addSubview(enterButton)

        digit1Button = createButton(title1:"➡︎R",title2: "1",  title3:"➡︎P", accessoryLabel: "digit1")
        view.addSubview(digit1Button)

        digit2Button = createButton(title1:"➡︎H.MS",title2: "2",  title3:"➡︎H", accessoryLabel: "digit2")
        view.addSubview(digit2Button)

        digit3Button = createButton(title1:"➡︎RAD",title2: "3",  title3:"➡︎DEG", accessoryLabel: "digit3")
        view.addSubview(digit3Button)

        multiplyButton = createButton(title1:"",title2: "-",  title3:"", accessoryLabel: "subtract")
        view.addSubview(multiplyButton)


        // Fourth Row

        onButton = createOnButton()
...
        rclButton = createButton(title1:"",title2: "RCL",  title3:"", accessoryLabel: "rcl")
        view.addSubview(rclButton)
            
        digit0Button = createButton(title1:"x!",title2: "0",  title3:"x̅", accessoryLabel: "digit0")
        view.addSubview(digit0Button)

        dotButton = createButton(title1:"ẏ,r",title2: ".",  title3:"S", accessoryLabel: "dot")
        view.addSubview(dotButton)

        sumAddButton = createButton(title1:"L.R.",title2: "∑+", title3:"∑-",  accessoryLabel: "sumadd")
        view.addSubview(sumAddButton)

        divideButton = createButton(title1:"Py,x",title2: "+",  title3:"Cy,x", accessoryLabel: "add")
        view.addSubview(divideButton)

}
    

    private func createButton( title1 : String, title2 : String, title3: String, accessoryLabel : String) -> UIButton  {
...
              
              button.setAttributedTitle(attributedTitle, for: .normal)
              button.setTitleColor(.black, for: .normal)
              button.titleLabel?.font = .systemFont(ofSize: 25.0)
              button.translatesAutoresizingMaskIntoConstraints = false
              button.addTarget(self, action: #selector(buttonTapped), for: .touchUpInside)
              button.accessibilityLabel = "fkey"
              return button
        }
    
    private func createGButton() -> UIButton  {
            
                let attributedTitle = NSMutableAttributedString(string:"G")
...
