//
//  CommandKey.swift
//  UPNCalculator
//
//  Created by holgermayer on 11.12.19.
//  Copyright © 2019 holgermayer. All rights reserved.
//

import Foundation

enum CommandKey : String {
    
    case digit0Key = "digit0"
    case digit1Key = "digit1"
    case digit2Key = "digit2"
    case digit3Key = "digit3"
    case digit4Key = "digit4"
    case digit5Key = "digit5"
    case digit6Key = "digit6"
    case digit7Key = "digit7"
    case digit8Key = "digit8"
    case digit9Key = "digit9"
    case dotKey  = "dot"
    case addKey  = "add"
    case subtractKey  = "subtract"
    case multiplyKey  = "multiply"
    case divideKey  = "divide"
    case enterKey  = "enter"
    case chsKey  = "chs"
    case sinKey  = "sin"
    case cosKey  = "cos"
    case tanKey  = "tan"
    case sqrtKey  = "sqrt"
    case xOverEKey  = "xovere"
    case xOverTenKey  = "xoverten"
    case xOverYKey  = "xovery"
    case divide1ByXKey  = "divide1byx"
    case eexKey = "eex"
    case exchangeXYKey = "exchangexy"
    case backArrowKey = "backarrow"
    case gsbKey = "gsb"
    case stoKey = "sto"
    case rclKey = "rcl"
    case fKey = "fkey"
    case gKey = "gkey"
    case gtoKey = "gto"
    case rollDownKey = "rdown"
    case sumAddKey = "sumadd"
}
